email form replaced by embeded map

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <div class="star thirty-four"></div>
                 <div class="star thirty-five"></div>
                 <div class="star thirty-six"></div>
-                <h1>Hyperspace</h1>
-                <p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br /> and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+                <h1>Tomasz Amanowicz</h1>
+                <p>Web developer.</p>
                 <ul class="actions">
                     <li><a href="#one" class="button scrolly">Learn more</a></li>
                 </ul>
@@ -172,48 +172,48 @@
                     <section>
                         <form method="post" action="#">
                             <div class="fields">
-                                <div class="field half">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19875.128601258475!2d-2.5972525084705342!3d51.48769056922339!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48718de2963f4ced%3A0xcc53c5ea38c613b3!2sBristol%20BS7!5e0!3m2!1sen!2suk!4v1638403835374!5m2!1sen!2suk"
+                                    width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                <!-- <div class="field half">
                                     <label for="name">Name</label>
-                                    <input type="text" name="name" id="name" />
+                                    <input type="text" name="ContactName: " id="name" />
                                 </div>
                                 <div class="field half">
                                     <label for="email">Email</label>
-                                    <input type="text" name="email" id="email" />
+                                    <input type="text" name="ContactEmail: " id="email" />
                                 </div>
                                 <div class="field">
                                     <label for="message">Message</label>
                                     <textarea name="message" id="message" rows="5"></textarea>
-                                </div>
+                                </div> -->
                             </div>
-                            <ul class="actions">
-                                <li><a href="" class="button submit">Send Message</a></li>
-                            </ul>
+                            <!-- <ul class="actions">
+                                <li><a href="#" class="button submit">Send Message</a></li>
+                            </ul> -->
                         </form>
+
                     </section>
                     <section>
                         <ul class="contact">
                             <li>
                                 <h3>Address</h3>
-                                <span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
+                                <span>Bristol, UK<br />
+											Gorzów Wielkopolski, PL<br />
+											</span>
                             </li>
                             <li>
                                 <h3>Email</h3>
-                                <a href="#">user@untitled.tld</a>
+                                <a href="mailto:admtomas@gmail.com?Subject=Web%20developer%20query&body=Hi, Tom">admtomas@gmail.com</a>
                             </li>
                             <li>
                                 <h3>Phone</h3>
-                                <span>(000) 000-0000</span>
+                                <span>(+44) 07903316130</span>
                             </li>
                             <li>
                                 <h3>Social</h3>
                                 <ul class="icons">
-                                    <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                                    <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                                    <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                                    <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                                    <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                                    <li><a href="https://www.linkedin.com/in/tomasz-amanowicz-6b1186195/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                                    <li><a href="https://github.com/admtomas" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
                                 </ul>
                             </li>
                         </ul>
