Email form replaced by embedded map

--- a/index.html
+++ b/index.html
@@ -170,10 +170,9 @@
                 <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
                 <div class="split style1">
                     <section>
+                        <!-- Template for the  embedded HTML email form -->
                         <form method="post" action="#">
                             <div class="fields">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19875.128601258475!2d-2.5972525084705342!3d51.48769056922339!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48718de2963f4ced%3A0xcc53c5ea38c613b3!2sBristol%20BS7!5e0!3m2!1sen!2suk!4v1638403835374!5m2!1sen!2suk"
-                                    width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                                 <!-- <div class="field half">
                                     <label for="name">Name</label>
                                     <input type="text" name="ContactName: " id="name" />
@@ -181,16 +180,29 @@
                                 <div class="field half">
                                     <label for="email">Email</label>
                                     <input type="text" name="ContactEmail: " id="email" />
+
                                 </div>
                                 <div class="field">
                                     <label for="message">Message</label>
                                     <textarea name="message" id="message" rows="5"></textarea>
                                 </div> -->
+
+                                <div class="map">
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9937.217632374652!2d-2.593809746618891!3d51.4892811241138!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48718e016598884d%3A0xcc6e12a4b16e533f!2sHorfield%2C%20Bristol%20BS7%208UR!5e0!3m2!1sen!2suk!4v1638450284142!5m2!1sen!2suk"
+                                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                </div>
+                                <div class="map">
+                                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d38656.72502228901!2d15.183216247794494!3d52.731374718169185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47071f0a5a4118b7%3A0x5dd10df3cb5799dd!2sGorz%C3%B3w%20Wielkopolski%2C%20Poland!5e0!3m2!1sen!2suk!4v1638445652856!5m2!1sen!2suk"
+                                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                </div>
                             </div>
                             <!-- <ul class="actions">
                                 <li><a href="#" class="button submit">Send Message</a></li>
                             </ul> -->
                         </form>
+
+
+
 
                     </section>
                     <section>
