--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <!-- Intro -->
         <section id="intro" class="wrapper style1 fullscreen fade-up">
             <div class="inner">
+                <div class="shooting-star"></div>
+                <div class="shooting-star-2"></div>
                 <div class="star"></div>
                 <div class="star two"></div>
                 <div class="star three"></div>
@@ -89,7 +91,7 @@
                         <h2>Sed ipsum dolor</h2>
                         <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
                         <ul class="actions">
-                            <li><a href="generic.html" class="button">Learn more</a></li>
+                            <li><a href="#two" class="button scrolly">Learn more</a></li>
                         </ul>
                     </div>
                 </div>
@@ -101,7 +103,7 @@
                         <h2>Feugiat consequat</h2>
                         <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
                         <ul class="actions">
-                            <li><a href="generic.html" class="button">Learn more</a></li>
+                            <li><a href="#two" class="button scrolly">Learn more</a></li>
                         </ul>
                     </div>
                 </div>
@@ -113,7 +115,7 @@
                         <h2>Ultricies aliquam</h2>
                         <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
                         <ul class="actions">
-                            <li><a href="generic.html" class="button">Learn more</a></li>
+                            <li><a href="#two" class="button scrollly">Learn more</a></li>
                         </ul>
                     </div>
                 </div>
@@ -123,7 +125,7 @@
         <!-- Two -->
         <section id="two" class="wrapper style3 fade-up">
             <div class="inner">
-                <h2>What we do</h2>
+                <h2>What I do</h2>
                 <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
                 <div class="features">
                     <section>
@@ -158,7 +160,7 @@
                     </section>
                 </div>
                 <ul class="actions">
-                    <li><a href="generic.html" class="button">Learn more</a></li>
+                    <li><a href="#three" class="button scrolly">Learn more</a></li>
                 </ul>
             </div>
         </section>
@@ -215,7 +217,7 @@
                             </li>
                             <li>
                                 <h3>Email</h3>
-                                <a href="mailto:admtomas@gmail.com?Subject=Web%20developer%20query&body=Hi, Tom">admtomas@gmail.com</a>
+                                <a href="mailto:admtomas@gmail.com?Subject=Web%20developer%20query&body=Hi, Tom" target="_blank">admtomas@gmail.com</a>
                             </li>
                             <li>
                                 <h3>Phone</h3>
