--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <nav>
                 <ul>
                     <li><a href="#intro">Welcome</a></li>
-                    <li><a href="#one">Who am I</a></li>
-                    <li><a href="#two">What I do</a></li>
+                    <li><a href="#one">What I do</a></li>
+                    <li><a href="#two">Who am I</a></li>
                     <li><a href="#three">Get in touch</a></li>
                 </ul>
             </nav>
@@ -88,8 +88,9 @@
                 <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
                 <div class="content">
                     <div class="inner">
-                        <h2>Sed ipsum dolor</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+                        <h2>****</h2>
+                        <p>****</p>
+                        <p>************************</p>
                         <ul class="actions">
                             <li><a href="#two" class="button scrolly">Learn more</a></li>
                         </ul>
@@ -100,8 +101,9 @@
                 <a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
                 <div class="content">
                     <div class="inner">
-                        <h2>Feugiat consequat</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+                        <h2>*****</h2>
+                        <p>***</p>
+                        <p title="We ask for your age only for statistical purposes.">***********************************</p>
                         <ul class="actions">
                             <li><a href="#two" class="button scrolly">Learn more</a></li>
                         </ul>
@@ -109,11 +111,19 @@
                 </div>
             </section>
             <section>
-                <a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+                <a href="#" class="image"><img src="images/sydney-rae-unsplash-vegetables.jpg" alt="" data-position="25% 25%" /></a>
                 <div class="content">
                     <div class="inner">
-                        <h2>Ultricies aliquam</h2>
-                        <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+                        <h2>Tesco PLC</h2>
+                        <p>2006 - present</p>
+                        <p>Oversee the responsibility for replenishing store shelves, racks, and displays. Communicate directly with multiple customers and support clients through suggesting products according to specified needs. Support senior manager in
+                            implementation of process improvement initiatives and achieving predefined goals by leading teams in day-to-day activities. Perform a broad range of tasks, such as <span id="toggled">maintaining schedules,
+                                providing legal training, evaluating employees’ performance, updating documents, and dealing with customer queries. Led, trained, and developed up to 20 employees as a team leader and manager to enhance performance and effectiveness
+                                of the team. Successfully increased the profit and lowered the risk through implementation of effective strategies and coaching the teams. Achieved sales targets and minimized inefficiencies to accomplish predefined performance
+                                targets by motivating and coaching employees to work according to standards.</span>
+                            <span id="toggle"><i class="fas fa-angle-double-right" id="show"></i>
+                            <i class="fas fa-angle-double-left" id="hide"></i></span>
+                        </p>
                         <ul class="actions">
                             <li><a href="#two" class="button scrollly">Learn more</a></li>
                         </ul>
@@ -125,39 +135,55 @@
         <!-- Two -->
         <section id="two" class="wrapper style3 fade-up">
             <div class="inner">
-                <h2>What I do</h2>
-                <p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+                <h2>About Me</h2>
+                <p>Education & Professional Development</p>
                 <div class="features">
                     <section>
+                        <span class="icon solid major fa-university"></span>
+                        <h3>Cyber Security</h3>
+                        <p>University of the West of England, Bristol.</p>
+                        <p>Nov 2021 - present</p>
+                    </section>
+                    <section>
                         <span class="icon solid major fa-code"></span>
-                        <h3>Lorem ipsum amet</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-                    </section>
-                    <section>
-                        <span class="icon solid major fa-lock"></span>
-                        <h3>Aliquam sed nullam</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-                    </section>
-                    <section>
-                        <span class="icon solid major fa-cog"></span>
-                        <h3>Sed erat ullam corper</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                        <h3>Programming for the Web with JavaScriptt</h3>
+                        <p>PEDX, University of Pennsylvania course.</p>
+                        <p>Nov 2019 – March 2020</p>
                     </section>
                     <section>
                         <span class="icon solid major fa-desktop"></span>
-                        <h3>Veroeros quis lorem</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                        <h3>Web development course: Python, HTML, CSS & JavaScript</h3>
+                        <p>IT career Swap</p>
+                        <p>Dec 2019 – March 2020</p>
                     </section>
                     <section>
                         <span class="icon solid major fa-link"></span>
-                        <h3>Urna quis bibendum</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                        <h3>Responsive Web Design, Front End Libraries</h3>
+                        <p>freeCodeCamp</p>
+                        <p>2019</p>
                     </section>
                     <section>
-                        <span class="icon major fa-gem"></span>
-                        <h3>Aliquam urna dapibus</h3>
-                        <p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+                        <span class="icon solid major fa-user-graduate"></span>
+                        <h3>IT in Management</h3>
+                        <p>State Higher Vocational School, Gorzow Wlkp., Poland</p>
+                        <p>2003 -2006</p>
                     </section>
+                    <section>
+                        <span class="icon solid major fa-school "></span>
+                        <h3>A-Levels</h3>
+                        <p>Technical and General Education School Complex, Gorzow Wlkp., Poland</p>
+                        <p>1998 – 2002</p>
+                    </section>
+                    <!-- <section>
+                        <span class="icon solid major fa-store-alt "></span>
+                        <h3>Aliquam urna dapibus</h3>
+                        <p>description</p>
+                    </section>
+                    <section>
+                        <span class="icon solid major fa-school "></span>
+                        <h3>Aliquam urna dapibus</h3>
+                        <p>description</p>
+                    </section> -->
                 </div>
                 <ul class="actions">
                     <li><a href="#three" class="button scrolly">Learn more</a></li>
@@ -256,6 +282,7 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/hide.js"></script>
 
 </body>
 
