--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
         <!-- One -->
         <section id="one" class="wrapper style2 spotlights">
             <section>
-                <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+                <a href="#" class="image"><img src="images/bermix-studio-cyber-unsplash.jpg" alt="image of hacker with laptop" data-position="center center" /></a>
                 <div class="content">
                     <div class="inner">
-                        <h2>****</h2>
-                        <p>****</p>
-                        <p>************************</p>
+                        <h2>UWE Project</h2>
+                        <p><span id="toggled-three"><br>Working on a projects related with Cyber Security Bootcamp at University of the West of England.</span>
+                            <span id="toggle"><i class="fas fa-angle-double-right" id="show-three"></i>
+                        <i class="fas fa-angle-double-left" id="hide-three"></i></span></p>
                         <ul class="actions">
                             <li><a href="#two" class="button scrolly">Learn more</a></li>
                         </ul>
@@ -98,12 +99,19 @@
                 </div>
             </section>
             <section>
-                <a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+                <a href="https://github.com/bristol-tech-fair" class="image" target="_blank"><img src="images/altumcode-coding-unsplash.jpg" alt="image of heart" data-position="top center" /></a>
                 <div class="content">
                     <div class="inner">
-                        <h2>*****</h2>
-                        <p>***</p>
-                        <p title="We ask for your age only for statistical purposes.">***********************************</p>
+                        <h2>Bristol Tech Fair</h2>
+                        <p>A free tech resource platform for under 18s, where everyone can access, use and share tech related resources.<span id="toggled-one"><br>Working on a project of free tech resource platform for
+                            under 18s. To convert a Figma design to a real website I collaborate
+                            with other developers on slack or GitHub and Visual Studio Code is my
+                            IDE . For the front-end stack I use ReactJS with Styled Components and
+                            React Hooks to handle the state. For testing purpose React Testing
+                            Library is my tool. Regarding back-end stack it is MongoDB, Mongoose,
+                            NodeJS, Express.</span>
+                            <span id="toggle"><i class="fas fa-angle-double-right" id="show-one"></i>
+                        <i class="fas fa-angle-double-left" id="hide-one"></i></span></p>
                         <ul class="actions">
                             <li><a href="#two" class="button scrolly">Learn more</a></li>
                         </ul>
@@ -111,18 +119,18 @@
                 </div>
             </section>
             <section>
-                <a href="#" class="image"><img src="images/sydney-rae-unsplash-vegetables.jpg" alt="" data-position="25% 25%" /></a>
+                <a href="#one" class="image nolink"><img src="images/sydney-rae-unsplash-vegetables.jpg" alt="image of red and yellow peppers" data-position="top center" /></a>
                 <div class="content">
                     <div class="inner">
                         <h2>Tesco PLC</h2>
                         <p>2006 - present</p>
                         <p>Oversee the responsibility for replenishing store shelves, racks, and displays. Communicate directly with multiple customers and support clients through suggesting products according to specified needs. Support senior manager in
-                            implementation of process improvement initiatives and achieving predefined goals by leading teams in day-to-day activities. Perform a broad range of tasks, such as <span id="toggled">maintaining schedules,
+                            implementation of process improvement initiatives and achieving predefined goals by leading teams in day-to-day activities. Perform a broad range of tasks, such as <span id="toggled-two">maintaining schedules,
                                 providing legal training, evaluating employees’ performance, updating documents, and dealing with customer queries. Led, trained, and developed up to 20 employees as a team leader and manager to enhance performance and effectiveness
                                 of the team. Successfully increased the profit and lowered the risk through implementation of effective strategies and coaching the teams. Achieved sales targets and minimized inefficiencies to accomplish predefined performance
                                 targets by motivating and coaching employees to work according to standards.</span>
-                            <span id="toggle"><i class="fas fa-angle-double-right" id="show"></i>
-                            <i class="fas fa-angle-double-left" id="hide"></i></span>
+                            <span id="toggle"><i class="fas fa-angle-double-right" id="show-two"></i>
+                            <i class="fas fa-angle-double-left" id="hide-two"></i></span>
                         </p>
                         <ul class="actions">
                             <li><a href="#two" class="button scrollly">Learn more</a></li>
