--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <i class="fas fa-angle-double-left" id="hide-two"></i></span>
                         </p>
                         <ul class="actions">
-                            <li><a href="#two" class="button scrollly">Learn more</a></li>
+                            <li><a href="#two" class="button scrolly">Learn more</a></li>
                         </ul>
                     </div>
                 </div>
