--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <li><a href="#one">What I do</a></li>
                     <li><a href="#two">Who am I</a></li>
                     <li><a href="#three">Get in touch</a></li>
+                    <li><a href="./assets//downloads/CV - Tomasz Amanowicz.pdf" target="_blank">CV</a></li>
                 </ul>
             </nav>
         </div>
@@ -127,7 +128,7 @@
                         <p>Oversee the responsibility for replenishing store shelves, racks, and displays. Communicate directly with multiple customers and support clients through suggesting products according to specified needs. Support senior manager in
                             implementation of process improvement initiatives and achieving predefined goals by leading teams in day-to-day activities. Perform a broad range of tasks, such as <span id="toggled-two">maintaining schedules,
                                 providing legal training, evaluating employees’ performance, updating documents, and dealing with customer queries. Led, trained, and developed up to 20 employees as a team leader and manager to enhance performance and effectiveness
-                                of the team. Successfully increased the profit and lowered the risk through implementation of effective strategies and coaching the teams. Achieved sales targets and minimized inefficiencies to accomplish predefined performance
+                                of the team. Successfully increased the profit and lowered the risk through implementation of effective strategies and coaching the team. Achieved sales targets and minimized inefficiencies to accomplish predefined performance
                                 targets by motivating and coaching employees to work according to standards.</span>
                             <span id="toggle"><i class="fas fa-angle-double-right" id="show-two"></i>
                             <i class="fas fa-angle-double-left" id="hide-two"></i></span>
