--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                     <li><a href="#one">What I do</a></li>
                     <li><a href="#two">Who am I</a></li>
                     <li><a href="#three">Get in touch</a></li>
-                    <li><a href="./assets//downloads/CV - Tomasz Amanowicz.pdf" target="_blank">CV</a></li>
                 </ul>
             </nav>
         </div>
@@ -264,6 +263,10 @@
                                     <li><a href="https://www.linkedin.com/in/tomasz-amanowicz-6b1186195/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                                     <li><a href="https://github.com/admtomas" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
                                 </ul>
+                            </li>
+				<li>
+                                <h3>Download</h3>
+                                <li><a href="./assets//downloads/CV - Tomasz Amanowicz.pdf" target="_blank">CV</a></li>
                             </li>
                         </ul>
                     </section>
