--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                     <li><a href="https://github.com/admtomas" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
                                 </ul>
                             </li>
-				<li>
+                            <li>
                                 <h3>Download</h3>
                                 <li><a href="./assets//downloads/CV - Tomasz Amanowicz.pdf" target="_blank">CV</a></li>
                             </li>
@@ -280,7 +280,7 @@
     <footer id="footer" class="wrapper style1-alt">
         <div class="inner">
             <ul class="menu">
-                <li>Copyright &copy by Tomasz Amanowicz.</li>
+                <li>Copyright &copy by Tomasz Amanowicz <span id="year"></span></li>
                 <li>Credits to original author: <a href="http://html5up.net">HTML5 UP</a></li>
             </ul>
         </div>
@@ -295,6 +295,7 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/hide.js"></script>
+    <script src="assets/js/time.js"></script>
 
 </body>
 
