--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <section>
                         <span class="icon solid major fa-desktop"></span>
                         <h3>Web development course: Python, HTML, CSS & JavaScript</h3>
-                        <p>IT career Swap</p>
+                        <p>IT Career Swap</p>
                         <p>Dec 2019 – March 2020</p>
                     </section>
                     <section>
