--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <section>
                         <span class="icon solid major fa-code"></span>
                         <h3>Programming for the Web with JavaScriptt</h3>
-                        <p>PEDX, University of Pennsylvania course.</p>
+                        <p>EDX, University of Pennsylvania course.</p>
                         <p>Nov 2019 – March 2020</p>
                     </section>
                     <section>
