code for marking the text inside the whole web page, initial structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
-<body class="is-preload">
+<body class="is-preload" id="highlight">
 
     <!-- Sidebar -->
     <section id="sidebar">
@@ -287,6 +287,7 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="assets/dist/mark.min.js" charset="UTF-8"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
@@ -294,8 +295,9 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/hide.js"></script>
-    <script src="assets/js/time.js"></script>
+    <script defer src="assets/js/hide.js"></script>
+    <script defer src="assets/js/time.js"></script>
+    <script defer src="assets/js/markings.js"></script>
 
 </body>
 
