highlighting key words inside website

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
 
-<body class="is-preload" id="highlight">
+<body class="is-preload">
 
     <!-- Sidebar -->
     <section id="sidebar">
@@ -83,7 +83,7 @@
         </section>
 
         <!-- One -->
-        <section id="one" class="wrapper style2 spotlights">
+        <section id="one" class="wrapper style2 spotlights highlight-one highlight-two">
             <section>
                 <a href="#" class="image"><img src="images/bermix-studio-cyber-unsplash.jpg" alt="image of hacker with laptop" data-position="center center" /></a>
                 <div class="content">
