--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
                 <div class="star thirty-four"></div>
                 <div class="star thirty-five"></div>
                 <div class="star thirty-six"></div>
+                <div class="star thirty-seven"></div>
+                <div class="star thirty-eight"></div>
+                <div class="star p-one"></div>
+                <div class="star p-two"></div>
+                <div class="star p-three"></div>
+                <div class="star p-four"></div>
+                <div class="star p-five"></div>
+                <div class="star p-six"></div>
+                <div class="star p-seven"></div>
+                <div class="star p-eight"></div>
+                <div class="star p-nine"></div>
+                <div class="star p-ten"></div>
+                <div class="star p-eleven"></div>
+                <div class="star p-twelve"></div>
+                <div class="star p-thirteen"></div>
+                <div class="star p-fourteen"></div>
+                <div class="star p-fifteen"></div>
+                <div class="star p-sixteen"></div>
                 <h1>Tomasz Amanowicz</h1>
                 <p>Web developer.</p>
                 <ul class="actions">
