--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
                 <div class="star thirty-four"></div>
                 <div class="star thirty-five"></div>
                 <div class="star thirty-six"></div>
+                <div class="star thirty-seven"></div>
+                <div class="star thirty-eight"></div>
+                <div class="star p-one"></div>
+                <div class="star p-two"></div>
+                <div class="star p-three"></div>
+                <div class="star p-four"></div>
+                <div class="star p-five"></div>
+                <div class="star p-six"></div>
+                <div class="star p-seven"></div>
+                <div class="star p-eight"></div>
+                <div class="star p-nine"></div>
+                <div class="star p-ten"></div>
+                <div class="star p-eleven"></div>
+                <div class="star p-twelve"></div>
+                <div class="star p-thirteen"></div>
+                <div class="star p-fourteen"></div>
+                <div class="star p-fifteen"></div>
+                <div class="star p-sixteen"></div>
                 <h1>Tomasz Amanowicz</h1>
                 <p>Web developer.</p>
                 <ul class="actions">
@@ -83,7 +101,7 @@
         </section>
 
         <!-- One -->
-        <section id="one" class="wrapper style2 spotlights">
+        <section id="one" class="wrapper style2 spotlights highlight-one highlight-two">
             <section>
                 <a href="#" class="image"><img src="images/bermix-studio-cyber-unsplash.jpg" alt="image of hacker with laptop" data-position="center center" /></a>
                 <div class="content">
@@ -287,6 +305,7 @@
     </footer>
 
     <!-- Scripts -->
+    <script src="assets/dist/mark.min.js" charset="UTF-8"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.scrollex.min.js"></script>
     <script src="assets/js/jquery.scrolly.min.js"></script>
@@ -294,8 +313,9 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/hide.js"></script>
-    <script src="assets/js/time.js"></script>
+    <script defer src="assets/js/hide.js"></script>
+    <script defer src="assets/js/time.js"></script>
+    <script defer src="assets/js/markings.js"></script>
 
 </body>
 
