--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <!-- Two -->
         <section id="two" class="wrapper style3 fade-up">
             <div class="inner">
-                <h2>About Me</h2>
+<!--                 <h2>About Me</h2> -->
                 <p>Education & Professional Development</p>
                 <div class="features">
                     <section>
