--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             IDE . For the front-end stack I use ReactJS with Styled Components and
                             React Hooks to handle the state. For testing purpose React Testing
                             Library is my tool. Regarding back-end stack it is MongoDB, Mongoose,
-                            NodeJS, Express.</span>
+                            NodeJS, Express and Postman is the tool I use to test our API.</span>
                             <span id="toggle"><i class="fas fa-angle-double-right" id="show-one"></i>
                         <i class="fas fa-angle-double-left" id="hide-one"></i></span></p>
                         <ul class="actions">
