--- a/index.html
+++ b/index.html
@@ -116,10 +116,8 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Bristol Tech Fair</h2>
-                        <p>A free tech resource platform for under 18s, where everyone can access, use and share tech related resources. Working on a project of free tech resource platform for
-                            under 18s. To convert a Figma design to a real website I collaborate
-                            with other developers on slack or GitHub and Visual Studio Code is my
-                            IDE. <span id="toggled-one"> For the front-end stack I use ReactJS with Styled Components and
+                        <p>A free tech resource platform for under 18s, where everyone can access, use and share tech related resources. Working on a project of free tech resource platform for under 18s. To convert a Figma design to a real website I collaborate
+                            with other developers on slack or GitHub and Visual Studio Code is my IDE. <span id="toggled-one"> For the front-end stack I use ReactJS with Styled Components and
                             React Hooks to handle the state. For testing purpose React Testing
                             Library is my tool. Regarding back-end stack it is MongoDB, Mongoose,
                             NodeJS, Express and Postman is the tool I use to test our API.</span>
@@ -156,7 +154,7 @@
         <!-- Two -->
         <section id="two" class="wrapper style3 fade-up">
             <div class="inner">
-<!--                 <h2>About Me</h2> -->
+                <!--                 <h2>About Me</h2> -->
                 <p>Education & Professional Development</p>
                 <div class="features">
                     <section>
