Fonts style refactoring

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="#intro">Welcome</a></li>
                     <li><a href="#one">What I do</a></li>
-                    <li><a href="#two">Who am I</a></li>
+                    <li><a href="#two">Education path</a></li>
                     <li><a href="#three">Get in touch</a></li>
                 </ul>
             </nav>
@@ -102,9 +102,9 @@
                 <div class="content">
                     <div class="inner">
                         <h2>UWE Project</h2>
-                        <p><span id="toggled-three"><br>Working on a projects related with Cyber Security Bootcamp at University of the West of England.</span>
-                            <span id="toggle"><i class="fas fa-angle-double-right" id="show-three"></i>
-                        <i class="fas fa-angle-double-left" id="hide-three"></i></span></p>
+                        <p><span id="toggled-one"><br>Working on a projects related with Cyber Security Bootcamp at University of the West of England.</span>
+                            <span id="toggle" title="Click to expand text"><i class="fas fa-angle-double-right  arrow-color"  id="show-one"></i>
+                        <i class="fas fa-angle-double-left  arrow-color"  id="hide-one" title="Click to collapse text"></i></span></p>
                         <ul class="actions">
                             <li><a href="#two" class="button scrolly">Learn more</a></li>
                         </ul>
@@ -116,15 +116,14 @@
                 <div class="content">
                     <div class="inner">
                         <h2>Bristol Tech Fair</h2>
-                        <p>A free tech resource platform for under 18s, where everyone can access, use and share tech related resources. Working on a project of free tech resource platform for
-                            under 18s. To convert a Figma design to a real website I collaborate
-                            with other developers on slack or GitHub and Visual Studio Code is my
-                            IDE. <span id="toggled-one"> For the front-end stack I use ReactJS with Styled Components and
+                        <p>A free tech resource platform for under 18s, where everyone can access, use and share tech related resources. Working on a project of free tech resource platform for under 18s. To convert a Figma design to a real website I collaborate
+                            with other developers on slack or GitHub and Visual Studio Code is my IDE. <span id="toggled-two"> For the front-end stack I use ReactJS with Styled Components and
                             React Hooks to handle the state. For testing purpose React Testing
                             Library is my tool. Regarding back-end stack it is MongoDB, Mongoose,
                             NodeJS, Express and Postman is the tool I use to test our API.</span>
-                            <span id="toggle"><i class="fas fa-angle-double-right" id="show-one"></i>
-                        <i class="fas fa-angle-double-left" id="hide-one"></i></span></p>
+                            <span id="toggle" title="Click to expand text">
+                                <i class="fas fa-angle-double-right  arrow-color"  id="show-two"></i>
+                        <i class="fas fa-angle-double-left  arrow-color"  id="hide-two" title="Click to collapse text"></i></span></p>
                         <ul class="actions">
                             <li><a href="#two" class="button scrolly">Learn more</a></li>
                         </ul>
@@ -138,12 +137,12 @@
                         <h2>Tesco PLC</h2>
                         <p>2006 - present</p>
                         <p>Oversee the responsibility for replenishing store shelves, racks, and displays. Communicate directly with multiple customers and support clients through suggesting products according to specified needs. Support senior manager in
-                            implementation of process improvement initiatives and achieving predefined goals by leading teams in day-to-day activities. Perform a broad range of tasks, such as <span id="toggled-two">maintaining schedules,
+                            implementation of process improvement initiatives and achieving predefined goals by leading teams in day-to-day activities. Perform a broad range of tasks, such as <span id="toggled-three">maintaining schedules,
                                 providing legal training, evaluating employees’ performance, updating documents, and dealing with customer queries. Led, trained, and developed up to 20 employees as a team leader and manager to enhance performance and effectiveness
                                 of the team. Successfully increased the profit and lowered the risk through implementation of effective strategies and coaching the team. Achieved sales targets and minimized inefficiencies to accomplish predefined performance
                                 targets by motivating and coaching employees to work according to standards.</span>
-                            <span id="toggle"><i class="fas fa-angle-double-right" id="show-two"></i>
-                            <i class="fas fa-angle-double-left" id="hide-two"></i></span>
+                            <span id="toggle" title="Click to expand text"><i class="fas fa-angle-double-right  arrow-color"  id="show-three"></i>
+                            <i class="fas fa-angle-double-left  arrow-color"  id="hide-three" title="Click to collapse text"></i></span>
                         </p>
                         <ul class="actions">
                             <li><a href="#two" class="button scrolly">Learn more</a></li>
@@ -156,8 +155,8 @@
         <!-- Two -->
         <section id="two" class="wrapper style3 fade-up">
             <div class="inner">
-<!--                 <h2>About Me</h2> -->
-                <p>Education & Professional Development</p>
+                <!--                 <h2>About Me</h2> -->
+                <h2>Education & Professional Development</h2>
                 <div class="features">
                     <section>
                         <span class="icon solid major fa-university"></span>
@@ -172,7 +171,7 @@
                         <p>Nov 2019 – March 2020</p>
                     </section>
                     <section>
-                        <span class="icon solid major fa-desktop"></span>
+                        <i class="icon solid major fa-solid fa-laptop-code"></i>
                         <h3>Web development course: Python, HTML, CSS & JavaScript</h3>
                         <p>IT Career Swap</p>
                         <p>Dec 2019 – March 2020</p>
