minor visual and content changes

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 <a href="#" class="image"><img src="images/bermix-studio-cyber-unsplash.jpg" alt="image of hacker with laptop" data-position="center center" /></a>
                 <div class="content">
                     <div class="inner">
-                        <h2>UWE Project</h2>
-                        <p><span id="toggled-one"><br>Working on a projects related with Cyber Security Bootcamp at University of the West of England.</span>
+                        <h2>Cyber Security</h2>
+                        <p>Participating in University of the West of England Course gave me a chance to gain knowledge about various aspects of cyber security, networking, attacks and defence.<br> Please click on picture to open<span id="toggled-one"> my documented path through the learning process on my blog build in Django.</span>
                             <span id="toggle" title="Click to expand text"><i class="fas fa-angle-double-right  arrow-color"  id="show-one"></i>
                         <i class="fas fa-angle-double-left  arrow-color"  id="hide-one" title="Click to collapse text"></i></span></p>
                         <ul class="actions">
@@ -131,7 +131,7 @@
                 </div>
             </section>
             <section>
-                <a href="#one" class="image nolink"><img src="images/sydney-rae-unsplash-vegetables.jpg" alt="image of red and yellow peppers" data-position="top center" /></a>
+                <a href="#" class="image nolink"><img src="images/sydney-rae-unsplash-vegetables.jpg" alt="image of red and yellow peppers" data-position="top center" /></a>
                 <div class="content">
                     <div class="inner">
                         <h2>Tesco PLC</h2>
